MPB 0.8 (11/19/1999)

  * Initial public release.